--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Научиться учиться</title>
 <link rel="stylesheet" href="styles/normalize.css" />
 <link rel="stylesheet" href="styles/style.css" />
-  <meta name="description" content="Проектная работа №1 на Яндекс.Практикуме">
+<meta name="description" content="Проектная работа №1 на Яндекс.Практикуме">
+</head>
+<body>
 <div class="page">
   <!--HEADER-->
   <header class="header">
@@ -181,19 +183,19 @@
           <ul class="footer__column-links">
             <li>
               <a href="https://www.facebook.com/yandex.practicum/" target="_blank" class="footer__link all_links">
-                <img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social_icon">
+                <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social_icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="https://vk.com/yandex.practicum" target="_blank" class="footer__link all_links">
-                <img src="./images/vk_color_white.svg" alt="VK" class="footer__social_icon">
+                <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social_icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="https://www.instagram.com/yndx.practicum/" target="_blank" class="footer__link all_links">
-                <img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social_icon">
+                <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social_icon">
                 Instagram
               </a>
             </li>
