--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
             <li>
-              <a href="#" target="_blank" class="footer__link">Главная</a>
+              <a href="#" target="_blank" class="footer__column-link">Главная</a>
             </li>
             <li>
-              <a href="#" target="_blank" class="footer__link">Концепция</a>
+              <a href="#" target="_blank" class="footer__column-link">Концепция</a>
             </li>
             <li>
-              <a href="#" target="_blank" class="footer__link">Наставники</a>
+              <a href="#" target="_blank" class="footer__column-link">Наставники</a>
             </li>
           </ul>
         </nav>
@@ -204,19 +204,19 @@
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
             <li>
-              <a href="https://www.facebook.com/yandex.practicum/" target="_blank" class="footer__link">
+              <a href="https://www.facebook.com/yandex.practicum/" target="_blank" class="footer__column-link">
                 <img src="images/facebook_color_white.svg" lang="en" alt="Facebook" class="footer__social-icon" />
                 Facebook
               </a>
             </li>
             <li>
-              <a href="https://vk.com/yandex.practicum" target="_blank" class="footer__link">
+              <a href="https://vk.com/yandex.practicum" target="_blank" class="footer__column-link">
                 <img src="images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon" />
                 ВКонтакте
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/yndx.practicum/" target="_blank" class="footer__link">
+              <a href="https://www.instagram.com/yndx.practicum/" target="_blank" class="footer__column-link">
                 <img src="images/instagram_color_white.svg" lang="en" alt="Instagram" class="footer__social-icon" />
                 Instagram
               </a>
